package vn.qlkt.notification;

import java.util.Date;

public class SystemSetting {
    private String id;
    private String key;
    private String value;
    private Date updatedAt;
}
