// =====================================================================
//  PM QLKT — Lược đồ CSDL (import vào https://dbdiagram.io)
//  Nguồn: BE-QLKT/prisma/schema.prisma (đồng bộ với Database.sql).
//  Cách dùng: dbdiagram.io > New > paste nội dung file này.
//  Ghi chú: các cột "enum" (loai_de_xuat, role, status...) trong DB là
//  varchar + hằng số TS ở src/constants/ — Prisma không dùng native enum.
// =====================================================================

Project PM_QLKT {
  database_type: 'PostgreSQL'
  Note: 'Sơ đồ quan hệ CHÍNH (rút gọn) — 23 bảng đầy đủ cột + ~20 quan hệ cốt lõi. Đầy đủ 47 khóa ngoại xem database.dbml.'
}

// ───────────────────────── C3.1 — Tổ chức, Quân nhân & Tài khoản ─────────────────────────

Table CoQuanDonVi {
  id varchar(30) [pk]
  ma_don_vi varchar(50) [not null, unique]
  ten_don_vi varchar(255) [not null]
  so_luong int [not null, default: 0]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
  Note: 'Cơ quan/đơn vị cấp trên (đơn vị cha)'
}

Table DonViTrucThuoc {
  id varchar(30) [pk]
  co_quan_don_vi_id varchar(30) [not null]
  ma_don_vi varchar(50) [not null, unique]
  ten_don_vi varchar(255) [not null]
  so_luong int [not null, default: 0]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
  Note: 'Đơn vị trực thuộc (đơn vị con)'
}

Table ChucVu {
  id varchar(30) [pk]
  co_quan_don_vi_id varchar(30)
  don_vi_truc_thuoc_id varchar(30)
  ten_chuc_vu varchar(255) [not null]
  is_manager boolean [not null, default: false]
  he_so_chuc_vu float [not null, default: 0]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  Indexes {
    (co_quan_don_vi_id, ten_chuc_vu) [unique]
    (don_vi_truc_thuoc_id, ten_chuc_vu) [unique]
  }
}

Table QuanNhan {
  id varchar(30) [pk]
  cccd varchar(20) [unique]
  ho_ten varchar(255) [not null]
  gioi_tinh varchar(10)
  ngay_sinh date
  que_quan_2_cap varchar(255)
  que_quan_3_cap varchar(255)
  tru_quan varchar(255)
  cho_o_hien_nay varchar(255)
  co_quan_don_vi jsonb
  ngay_nhap_ngu date
  ngay_xuat_ngu date
  ngay_vao_dang date
  ngay_vao_dang_chinh_thuc date
  so_the_dang_vien varchar(50)
  so_dien_thoai varchar(20)
  cap_bac varchar(50)
  co_quan_don_vi_id varchar(30)
  don_vi_truc_thuoc_id varchar(30)
  chuc_vu_id varchar(30) [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table LichSuChucVu {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null]
  chuc_vu_id varchar(30) [note: 'nullable — SetNull khi xóa chức vụ']
  he_so_chuc_vu float [not null, default: 0]
  ten_chuc_vu varchar(255) [note: 'snapshot tên chức vụ']
  ten_co_quan_don_vi varchar(255) [note: 'snapshot tên cơ quan đơn vị']
  ten_don_vi_truc_thuoc varchar(255) [note: 'snapshot tên đơn vị trực thuộc']
  ngay_bat_dau date [not null]
  ngay_ket_thuc date
  so_thang int
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table TaiKhoan {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [unique]
  username varchar(100) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(20) [not null, note: 'SUPER_ADMIN | ADMIN | MANAGER | USER']
  refreshToken text
  prevRefreshToken text [note: 'token trước đó, chấp nhận trong cửa sổ grace ngắn']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

// ───────────────────────── C3.2 — Đề xuất khen thưởng ─────────────────────────

Table BangDeXuat {
  id varchar(30) [pk]
  co_quan_don_vi_id varchar(30)
  don_vi_truc_thuoc_id varchar(30)
  nguoi_de_xuat_id varchar(30) [note: 'nullable — SetNull khi xóa tài khoản']
  loai_de_xuat varchar(20) [not null]
  nam int [not null]
  thang int
  status varchar(20) [not null, default: 'PENDING', note: 'PENDING | APPROVED | REJECTED']
  data_danh_hieu jsonb
  data_thanh_tich jsonb
  data_nien_han jsonb
  data_cong_hien jsonb
  files_attached jsonb
  files_attached_admin jsonb
  ghi_chu text
  rejection_reason text
  nguoi_duyet_id varchar(30)
  ngay_duyet timestamp
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

// ───────────────── C3.3 — Khen thưởng, hồ sơ điều kiện & quyết định ─────────────────

Table FileQuyetDinh {
  id varchar(30) [pk]
  so_quyet_dinh varchar(100) [not null, unique]
  nam int [not null]
  ngay_ky date [not null]
  nguoi_ky varchar(255) [not null]
  file_path varchar(500)
  loai_khen_thuong varchar(50)
  ghi_chu text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table DanhHieuHangNam {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null]
  nam int [not null]
  danh_hieu varchar(20)
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  nhan_bkbqp boolean [not null, default: false]
  so_quyet_dinh_bkbqp varchar(100)
  ghi_chu_bkbqp text
  nhan_cstdtq boolean [not null, default: false]
  so_quyet_dinh_cstdtq varchar(100)
  ghi_chu_cstdtq text
  nhan_bkttcp boolean [not null, default: false]
  so_quyet_dinh_bkttcp varchar(100)
  ghi_chu_bkttcp text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  Indexes {
    (quan_nhan_id, nam) [unique]
  }
}

Table DanhHieuDonViHangNam {
  id varchar(30) [pk]
  co_quan_don_vi_id varchar(30)
  don_vi_truc_thuoc_id varchar(30)
  nam int [not null]
  danh_hieu varchar(50)
  so_quyet_dinh varchar(100)
  nhan_bkbqp boolean [not null, default: false]
  so_quyet_dinh_bkbqp varchar(100)
  ghi_chu_bkbqp text
  nhan_bkttcp boolean [not null, default: false]
  so_quyet_dinh_bkttcp varchar(100)
  ghi_chu_bkttcp text
  nguoi_tao_id varchar(30) [not null]
  nguoi_duyet_id varchar(30)
  ngay_duyet timestamp
  ghi_chu text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  Indexes {
    (co_quan_don_vi_id, nam) [unique]
    (don_vi_truc_thuoc_id, nam) [unique]
  }
}

Table ThanhTichKhoaHoc {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null]
  nam int [not null]
  loai varchar(10) [not null]
  mo_ta varchar(500) [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table KhenThuongHCCSVV {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null]
  danh_hieu varchar(20) [not null]
  nam int [not null]
  thang int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  thoi_gian jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  Indexes {
    (quan_nhan_id, danh_hieu) [unique]
  }
}

Table KhenThuongHCBVTQ {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  danh_hieu varchar(20) [not null]
  nam int [not null]
  thang int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  thoi_gian_nhom_0_7 jsonb
  thoi_gian_nhom_0_8 jsonb
  thoi_gian_nhom_0_9_1_0 jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HuanChuongQuanKyQuyetThang {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  nam int [not null]
  thang int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  thoi_gian jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table KyNiemChuongVSNXDQDNDVN {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  nam int [not null]
  thang int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  thoi_gian jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table KhenThuongDotXuat {
  id varchar(30) [pk]
  loai varchar(30) [not null, default: 'KHEN_THUONG_DOT_XUAT']
  doi_tuong varchar(20) [not null, default: 'CA_NHAN', note: 'CA_NHAN | TAP_THE']
  quan_nhan_id varchar(30)
  co_quan_don_vi_id varchar(30)
  don_vi_truc_thuoc_id varchar(30)
  hinh_thuc_khen_thuong varchar(255) [not null]
  nam int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  files_dinh_kem jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HoSoNienHan {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  hccsvv_hang_ba_status varchar(20) [not null, default: 'CHUA_DU']
  hccsvv_hang_ba_ngay date
  hccsvv_hang_nhi_status varchar(20) [not null, default: 'CHUA_DU']
  hccsvv_hang_nhi_ngay date
  hccsvv_hang_nhat_status varchar(20) [not null, default: 'CHUA_DU']
  hccsvv_hang_nhat_ngay date
  goi_y text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HoSoCongHien {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  hcbvtq_total_months int [not null, default: 0]
  months_07 int [not null, default: 0]
  months_08 int [not null, default: 0]
  months_0910 int [not null, default: 0]
  hcbvtq_hang_ba_status varchar(20) [not null, default: 'CHUA_DU']
  hcbvtq_hang_ba_ngay date
  hcbvtq_hang_nhi_status varchar(20) [not null, default: 'CHUA_DU']
  hcbvtq_hang_nhi_ngay date
  hcbvtq_hang_nhat_status varchar(20) [not null, default: 'CHUA_DU']
  hcbvtq_hang_nhat_ngay date
  goi_y text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HoSoHangNam {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  tong_cstdcs int [not null, default: 0]
  tong_nckh int [not null, default: 0]
  tong_cstdcs_json jsonb
  tong_nckh_json jsonb
  cstdcs_lien_tuc int [not null, default: 0]
  nckh_lien_tuc int [not null, default: 0]
  bkbqp_lien_tuc int [not null, default: 0]
  cstdtq_lien_tuc int [not null, default: 0]
  du_dieu_kien_bkbqp boolean [not null, default: false]
  du_dieu_kien_cstdtq boolean [not null, default: false]
  du_dieu_kien_bkttcp boolean [not null, default: false]
  goi_y text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HoSoDonViHangNam {
  id varchar(30) [pk]
  co_quan_don_vi_id varchar(30)
  don_vi_truc_thuoc_id varchar(30)
  nam int [not null]
  tong_dvqt int [not null, default: 0]
  tong_dvqt_json jsonb
  dvqt_lien_tuc int [not null, default: 0]
  du_dieu_kien_bkbqp boolean [not null, default: false]
  du_dieu_kien_bkttcp boolean [not null, default: false]
  goi_y text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  Indexes {
    (co_quan_don_vi_id, nam) [unique]
    (don_vi_truc_thuoc_id, nam) [unique]
  }
}

// ───────────────────────── Hệ thống (log, thông báo, cấu hình) ─────────────────────────

Table SystemLog {
  id varchar(30) [pk]
  nguoi_thuc_hien_id varchar(30)
  actor_role varchar(20) [not null]
  action varchar(50) [not null]
  resource varchar(50) [not null]
  tai_nguyen_id varchar(30)
  description varchar(500) [not null]
  payload jsonb
  ip_address varchar(45)
  user_agent text
  createdAt timestamp [not null]
}

Table ThongBao {
  id varchar(30) [pk]
  nguoi_nhan_id varchar(30)
  recipient_role varchar(20) [not null]
  type varchar(50) [not null]
  title varchar(255) [not null]
  message varchar(500) [not null]
  resource varchar(50)
  tai_nguyen_id varchar(30)
  link varchar(255)
  is_read boolean [not null, default: false]
  nhat_ky_he_thong_id varchar(30)
  createdAt timestamp [not null]
  readAt timestamp
}

Table SystemSetting {
  id varchar(30) [pk]
  key varchar(100) [not null, unique]
  value text [not null]
  updatedAt timestamp [not null]
}

// ───────────────────────── Nhóm phân hệ (TableGroup) ─────────────────────────

TableGroup "C3.1 Tổ chức · Quân nhân · Tài khoản" {
  CoQuanDonVi
  DonViTrucThuoc
  ChucVu
  QuanNhan
  LichSuChucVu
  TaiKhoan
}

TableGroup "C3.2 Đề xuất khen thưởng" {
  BangDeXuat
}

TableGroup "C3.3 Khen thưởng · Hồ sơ · Quyết định" {
  FileQuyetDinh
  DanhHieuHangNam
  DanhHieuDonViHangNam
  ThanhTichKhoaHoc
  KhenThuongHCCSVV
  KhenThuongHCBVTQ
  HuanChuongQuanKyQuyetThang
  KyNiemChuongVSNXDQDNDVN
  KhenThuongDotXuat
  HoSoNienHan
  HoSoCongHien
  HoSoHangNam
  HoSoDonViHangNam
}

TableGroup "Hệ thống" {
  SystemLog
  ThongBao
  SystemSetting
}

// ───────────────────── Quan hệ chính (rút gọn ~20) ─────────────────────
// Bỏ bớt cho dễ đọc: nhánh số quyết định (→ FileQuyetDinh) xem erd-5-quyet-dinh;
// các khóa ngoại phụ (CQDV song song DVTT, người duyệt/người tạo) xem database.dbml.

// Tổ chức / nhân sự
Ref: DonViTrucThuoc.co_quan_don_vi_id > CoQuanDonVi.id
Ref: ChucVu.co_quan_don_vi_id > CoQuanDonVi.id
Ref: QuanNhan.chuc_vu_id > ChucVu.id
Ref: QuanNhan.don_vi_truc_thuoc_id > DonViTrucThuoc.id
Ref: LichSuChucVu.quan_nhan_id > QuanNhan.id
Ref: TaiKhoan.quan_nhan_id > QuanNhan.id

// Đề xuất
Ref: BangDeXuat.nguoi_de_xuat_id > TaiKhoan.id

// Khen thưởng cá nhân & hồ sơ điều kiện → quân nhân
Ref: DanhHieuHangNam.quan_nhan_id > QuanNhan.id
Ref: ThanhTichKhoaHoc.quan_nhan_id > QuanNhan.id
Ref: KhenThuongHCCSVV.quan_nhan_id > QuanNhan.id
Ref: KhenThuongHCBVTQ.quan_nhan_id > QuanNhan.id
Ref: HuanChuongQuanKyQuyetThang.quan_nhan_id > QuanNhan.id
Ref: KyNiemChuongVSNXDQDNDVN.quan_nhan_id > QuanNhan.id
Ref: KhenThuongDotXuat.quan_nhan_id > QuanNhan.id
Ref: HoSoNienHan.quan_nhan_id > QuanNhan.id
Ref: HoSoCongHien.quan_nhan_id > QuanNhan.id
Ref: HoSoHangNam.quan_nhan_id > QuanNhan.id

// Khen thưởng & hồ sơ đơn vị → đơn vị
Ref: DanhHieuDonViHangNam.don_vi_truc_thuoc_id > DonViTrucThuoc.id
Ref: HoSoDonViHangNam.don_vi_truc_thuoc_id > DonViTrucThuoc.id

// Hệ thống
Ref: ThongBao.nguoi_nhan_id > TaiKhoan.id
